--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nestfig",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "Easily create and manage your NestJS project configurations",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -36,10 +36,10 @@
   "peerDependencies": {
     "@nestjs/common": "^10.4.4",
     "@nestjs/core": "^10.4.4",
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.4.0",
+    "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
-    "class-transformer": "0.5.1"
+    "reflect-metadata": "^0.1.13",
+    "yaml": "^2.5.1"
   },
   "devDependencies": {
     "@types/node": "^22.7.4",
