--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nestfig",
-  "version": "0.0.4",
+  "version": "0.1.0",
   "description": "Easily create and manage your NestJS project configurations",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -31,15 +31,15 @@
   },
   "homepage": "https://github.com/sinanovicanes/nestfig#readme",
   "dependencies": {
-    "dotenv": "16.4.5"
+    "dotenv": "^16.4.5",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
+    "yaml": "^2.5.1"
   },
   "peerDependencies": {
     "@nestjs/common": "^10.4.4",
     "@nestjs/core": "^10.4.4",
-    "class-transformer": "0.5.1",
-    "class-validator": "0.14.1",
-    "reflect-metadata": "^0.1.13",
-    "yaml": "^2.5.1"
+    "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
     "@types/node": "^22.7.4",
